# docs/swagger.json
@@ -150,6 +150,42 @@
                 }
             }
         },
+        "/temp/delete": {
+            "delete": {
+                "description": "delete Temp Session",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Temp"
+                ],
+                "summary": "Delete Temp",
+                "operationId": "delete-temp-session",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "id",
+                        "name": "id",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/handler.Empty"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/temp/message": {
             "get": {
                 "description": "get one Temp messages",
@@ -258,6 +294,33 @@
                     }
                 }
             }
+        },
+        "/temp/session": {
+            "get": {
+                "description": "Get Temp Session",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Temp"
+                ],
+                "summary": "Get Temp Session",
+                "operationId": "get-temp-session",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/handler.TempAccount"
+                            }
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -272,6 +335,35 @@
                 }
             }
         },
+        "handler.Attachments": {
+            "type": "object",
+            "properties": {
+                "contentType": {
+                    "type": "string"
+                },
+                "disposition": {
+                    "type": "string"
+                },
+                "downloadUrl": {
+                    "type": "string"
+                },
+                "filename": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "related": {
+                    "type": "boolean"
+                },
+                "size": {
+                    "type": "integer"
+                },
+                "transferEncoding": {
+                    "type": "string"
+                }
+            }
+        },
         "handler.DetailedMessage": {
             "type": "object",
             "properties": {
@@ -281,7 +373,7 @@
                 "attachments": {
                     "type": "array",
                     "items": {
-                        "type": "string"
+                        "$ref": "#/definitions/handler.Attachments"
                     }
                 },
                 "bcc": {
@@ -353,12 +445,7 @@
                 "updatedAt": {
                     "type": "string"
                 },
-                "verifications": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
-                }
+                "verifications": {}
             }
         },
         "handler.Empty": {
