# handler/temp.go
@@ -2,10 +2,13 @@ package handler
 
 import (
 	"encoding/json"
+	"fmt"
 	"goMailer/auth"
+	"io"
 	"log"
 	"net/http"
 	"strconv"
+	"strings"
 	"time"
 
 	"github.com/felixstrobel/mailtm"
@@ -20,9 +23,8 @@ type TempAccount struct {
 	IsDeleted  bool      `json:"isDeleted"`
 	CreatedAt  time.Time `json:"createdAt"`
 	UpdatedAt  time.Time `json:"updatedAt"`
-
-	Password string
-	Token    string
+	Password   string    `json:"password,omitempty"`
+	Token      string    `json:"token,omitempty"`
 }
 
 type TempHandler struct {
@@ -33,29 +35,40 @@ type Addressee struct {
 	Name    string `json:"name"`
 }
 
+type Attachments struct {
+	ContentType      string `json:"contentType"`
+	Disposition      string `json:"disposition"`
+	DownloadURL      string `json:"downloadUrl"`
+	Filename         string `json:"filename"`
+	ID               string `json:"id"`
+	Related          bool   `json:"related"`
+	Size             int    `json:"size"`
+	TransferEncoding string `json:"transferEncoding"`
+}
+
 type DetailedMessage struct {
-	ID             string      `json:"id"`
-	AccountID      string      `json:"accountId"`
-	MessageID      string      `json:"msgid"`
-	From           Addressee   `json:"from"`
-	To             []Addressee `json:"to"`
-	CC             []Addressee `json:"cc"`
-	BCC            []Addressee `json:"bcc"`
-	Subject        string      `json:"subject"`
-	Seen           bool        `json:"seen"`
-	Flagged        bool        `json:"flagged"`
-	IsDeleted      bool        `json:"isDeleted"`
-	Verifications  []string    `json:"verifications"`
-	Retention      bool        `json:"retention"`
-	RetentionDate  time.Time   `json:"retentionDate"`
-	Text           string      `json:"text"`
-	Html           []string    `json:"html"`
-	HasAttachments bool        `json:"hasAttachments"`
-	Attachments    []string    `json:"attachments"`
-	Size           int         `json:"size"`
-	DownloadUrl    string      `json:"downloadUrl"`
-	CreatedAt      time.Time   `json:"createdAt"`
-	UpdatedAt      time.Time   `json:"updatedAt"`
+	ID             string        `json:"id"`
+	AccountID      string        `json:"accountId"`
+	MessageID      string        `json:"msgid"`
+	From           Addressee     `json:"from"`
+	To             []Addressee   `json:"to"`
+	CC             []Addressee   `json:"cc"`
+	BCC            []Addressee   `json:"bcc"`
+	Subject        string        `json:"subject"`
+	Seen           bool          `json:"seen"`
+	Flagged        bool          `json:"flagged"`
+	IsDeleted      bool          `json:"isDeleted"`
+	Verifications  interface{}   `json:"verifications"`
+	Retention      bool          `json:"retention"`
+	RetentionDate  time.Time     `json:"retentionDate"`
+	Text           string        `json:"text"`
+	Html           []string      `json:"html"`
+	HasAttachments bool          `json:"hasAttachments"`
+	Attachments    []Attachments `json:"attachments"`
+	Size           int           `json:"size"`
+	DownloadUrl    string        `json:"downloadUrl"`
+	CreatedAt      time.Time     `json:"createdAt"`
+	UpdatedAt      time.Time     `json:"updatedAt"`
 }
 
 type Message struct {
@@ -100,7 +113,7 @@ func (t *TempHandler) RegTempEmail(w http.ResponseWriter, r *http.Request) {
 	}
 
 	cookie := &http.Cookie{
-		Name:     "googleMailer_" + account.ID,
+		Name:     "tempMailer_" + account.ID,
 		Value:    encoded,
 		Path:     "/",
 		Expires:  time.Now().Add(1 * 24 * time.Hour),
@@ -130,7 +143,7 @@ func (t *TempHandler) GetTempMessages(w http.ResponseWriter, r *http.Request) {
 	}
 
 	ProviderId := r.URL.Query().Get("id")
-	cookieName := "googleMailer_" + ProviderId
+	cookieName := "tempMailer_" + ProviderId
 
 	var account *mailtm.Account
 	cookie, err := r.Cookie(cookieName)
@@ -172,7 +185,7 @@ func (t *TempHandler) GetTempMessages(w http.ResponseWriter, r *http.Request) {
 func (t *TempHandler) GetTempMessage(w http.ResponseWriter, r *http.Request) {
 	messageId := r.URL.Query().Get("messageId")
 	accountId := r.URL.Query().Get("id")
-	cookieName := "googleMailer_" + accountId
+	cookieName := "tempMailer_" + accountId
 
 	var account *mailtm.Account
 	cookie, err := r.Cookie(cookieName)
@@ -183,17 +196,113 @@ func (t *TempHandler) GetTempMessage(w http.ResponseWriter, r *http.Request) {
 	if err != nil {
 		http.Error(w, err.Error(), http.StatusInternalServerError)
 	}
-	log.Println("OO", account)
+
+	if account.Token == "" || messageId == "" {
+		http.Error(w, err.Error(), http.StatusInternalServerError)
+	}
+
+	url := fmt.Sprintf("https://api.mail.tm/messages/%s", messageId)
+	req, err := http.NewRequest("GET", url, nil)
+	if err != nil {
+		http.Error(w, err.Error(), http.StatusInternalServerError)
+	}
+
+	req.Header.Set("Authorization", fmt.Sprintf("Bearer %s", account.Token))
+	resp, err := http.DefaultClient.Do(req)
+	if err != nil {
+		http.Error(w, err.Error(), http.StatusInternalServerError)
+	}
+	defer resp.Body.Close()
+
+	body, err := io.ReadAll(resp.Body)
+	if err != nil {
+		http.Error(w, err.Error(), http.StatusInternalServerError)
+	}
+
+	var response DetailedMessage
+	err = json.Unmarshal(body, &response)
+	if err != nil {
+		http.Error(w, err.Error(), http.StatusInternalServerError)
+	}
+
+	w.Header().Set("Content-Type", "application/json")
+	if err := json.NewEncoder(w).Encode(response); err != nil {
+		http.Error(w, err.Error(), http.StatusInternalServerError)
+	}
+}
+
+// @Summary Get Temp Session
+// @Description Get Temp Session
+// @Tags Temp
+// @ID get-temp-session
+// @Accept  json
+// @Produce  json
+// @Success 200 {array} TempAccount
+// @Router /temp/session [get]
+func (h *TempHandler) GetTempSession(w http.ResponseWriter, r *http.Request) {
+	allCookies := r.Cookies()
+	var accounts []TempAccount
+
+	for _, cookie := range allCookies {
+		if strings.HasPrefix(cookie.Name, "tempMailer_") {
+			var account TempAccount
+			err := auth.Decrypt(cookie.Value, &account)
+			if err != nil {
+				http.Error(w, err.Error(), http.StatusInternalServerError)
+				return
+			}
+			accounts = append(accounts, account)
+		}
+	}
+
+	w.Header().Set("Content-Type", "application/json")
+	if err := json.NewEncoder(w).Encode(accounts); err != nil {
+		http.Error(w, err.Error(), http.StatusInternalServerError)
+	}
+}
+
+// @Summary Delete Temp
+// @Description delete Temp Session
+// @Tags Temp
+// @ID delete-temp-session
+// @Accept  json
+// @Produce  json
+// @Param  id query string true "id"
+// @Success 200 {array} Empty
+// @Router /temp/delete [delete]
+func (h *TempHandler) DeleteTempSession(w http.ResponseWriter, r *http.Request) {
+	ProviderId := r.URL.Query().Get("id")
+	cookieName := "tempMailer_" + ProviderId
+
+	var account *mailtm.Account
+	cookie, err := r.Cookie(cookieName)
+	if err != nil {
+		http.Error(w, err.Error(), http.StatusInternalServerError)
+	}
+	err = auth.Decrypt(cookie.Value, &account)
+	if err != nil {
+		http.Error(w, err.Error(), http.StatusInternalServerError)
+	}
 
 	client, err := mailtm.New()
 	if err != nil {
 		http.Error(w, err.Error(), http.StatusInternalServerError)
 	}
 
-	message, err := client.GetMessageByID(account, messageId)
+	err = client.DeleteAccount(account)
 	if err != nil {
 		http.Error(w, err.Error(), http.StatusInternalServerError)
 	}
 
-	log.Println("OONE", message)
+	newcookie := &http.Cookie{
+		Name:     cookieName,
+		Value:    "",
+		Path:     "/",
+		Expires:  time.Unix(0, 0),
+		HttpOnly: true,
+		Secure:   true,
+	}
+
+	http.SetCookie(w, newcookie)
+	w.Write([]byte("deleted"))
 }
